# turtlesim

./: .project  CMakeLists.txt  CodeGeneration.cmake  README.md  turtlesim.srctrlprj
.adpa/: adpa.adpa  adpa.qts.silent.dcusr
.adpa/log/GenerationReport_202103021847/: GenerationReport.html
.adpa/log/GenerationReport_202103031045/: GenerationReport.html
.adpa/log/GenerationReport_202103221245/: GenerationReport.html
.adpa/log/GenerationReport_202103251453/: GenerationReport.html
.adpa/log/GenerationReport_202103251454/: GenerationReport.html
etc/AP_actuator/: logging_config.json
etc/AP_controller/: logging_config.json
etc/ROS_locator/: logging_config.json  per_config.json
etc/rosap_exe/: logging_config.json
etc/someip-posix/: someipd-posix.json
model/: AUTOSAR_MOD_StandardTypes.arxml  AUTOSAR_MOD_StandardTypes_Ipc.arxml  AUTOSAR_MOD_StandardTypes_Ipc_Provided.arxml  AUTOSAR_MOD_StandardTypes_Ipc_Required.arxml  AUTOSAR_MOD_StandardTypes_Provided.arxml  AUTOSAR_MOD_StandardTypes_Required.arxml  AUTOSAR_MOD_StandardTypes_Required1.arxml  AUTOSAR_MOD_StandardTypes_Someip.arxml  AUTOSAR_MOD_StandardTypes_Someip1.arxml  LKA_app.arxml  Machines.arxml  Simnode_app.arxml  turtlesim.arxml  turtlesim_deployment.arxml
src/: CMakeLists.txt
src-gen/AP_actuator/configuration/: exec_config.json  someip_config.json
src-gen/AP_actuator/includes/apns/: driving_information.h  driving_information_common.h  driving_information_resource_manager.h  driving_information_skeleton.h  driving_information_skeleton_impl_interface.h  driving_information_skeleton_resource_manager.h  driving_information_types.h  impl_type_a_vel.h  impl_type_l_vel.h  impl_type_locationtype.h  impl_type_speedtype.h  speed_control.h  speed_control_common.h  speed_control_proxy.h  speed_control_proxy_internal.h  speed_control_proxy_resource_manager.h  speed_control_resource_manager.h  speed_control_types.h
src-gen/AP_actuator/someip-posix/apns/: driving_information_skeleton_fields_deserializer.h  driving_information_skeleton_fields_serializer.h  driving_information_skeleton_methods_deserializer.h  driving_information_skeleton_methods_serializer.h  driving_information_skeleton_someip_binding.cpp  driving_information_skeleton_someip_binding.h  driving_information_skeleton_someip_event_manager.cpp  driving_information_skeleton_someip_event_manager.h  driving_information_skeleton_someip_methods.h  driving_information_someip_skeleton_factory.h  speed_control_proxy_fields_deserializer.h  speed_control_proxy_fields_serializer.h  speed_control_proxy_methods_deserializer.h  speed_control_proxy_methods_serializer.h  speed_control_proxy_someip_binding.cpp  speed_control_proxy_someip_binding.h  speed_control_proxy_someip_event_manager.cpp  speed_control_proxy_someip_event_manager.h  speed_control_proxy_someip_methods.h  speed_control_someip_proxy_factory.h
src-gen/AP_actuator/src/apns/: driving_information.cpp  driving_information_resource_manager.cpp  driving_information_skeleton.cpp  driving_information_skeleton_resource_manager.cpp  speed_control.cpp  speed_control_proxy.cpp  speed_control_proxy_resource_manager.cpp  speed_control_resource_manager.cpp
src-gen/AP_controller/configuration/: exec_config.json  someip_config.json
src-gen/AP_controller/includes/apns/: driving_information.h  driving_information_common.h  driving_information_proxy.h  driving_information_proxy_internal.h  driving_information_proxy_resource_manager.h  driving_information_resource_manager.h  driving_information_types.h  external_elements.h  external_elements_common.h  external_elements_resource_manager.h  external_elements_skeleton.h  external_elements_skeleton_impl_interface.h  external_elements_skeleton_resource_manager.h  external_elements_types.h  impl_type_a_vel.h  impl_type_l_vel.h  impl_type_lanetype.h  impl_type_locationtype.h  impl_type_speedtype.h  speed_control.h  speed_control_common.h  speed_control_resource_manager.h  speed_control_skeleton.h  speed_control_skeleton_impl_interface.h  speed_control_skeleton_resource_manager.h  speed_control_types.h
src-gen/AP_controller/ipc-posix/apns/: driving_information_ipc_proxy_factory.h  driving_information_proxy_ipc_binding.cpp  driving_information_proxy_ipc_binding.h  driving_information_proxy_ipc_event_manager.cpp  driving_information_proxy_ipc_event_manager.h  driving_information_proxy_ipc_methods.cpp  driving_information_proxy_ipc_methods.h  external_elements_ipc_skeleton_factory.h  external_elements_skeleton_ipc_binding.cpp  external_elements_skeleton_ipc_binding.h  external_elements_skeleton_ipc_event_manager.cpp  external_elements_skeleton_ipc_event_manager.h  external_elements_skeleton_ipc_method_manager.cpp  external_elements_skeleton_ipc_method_manager.h
src-gen/AP_controller/someip-posix/apns/: driving_information_proxy_fields_deserializer.h  driving_information_proxy_fields_serializer.h  driving_information_proxy_methods_deserializer.h  driving_information_proxy_methods_serializer.h  driving_information_proxy_someip_binding.cpp  driving_information_proxy_someip_binding.h  (+14 more)
src-gen/ROS_locator/configuration/: exec_config.json
src-gen/rosap_exe/configuration/: exec_config.json  someip_config.json
src-gen/rosap_exe/etc/: updatemanager.json
src-gen/xilinxMachine/: machine_exec_config.json
src/AP_actuator/: AP_actuator_swc.cpp  CMakeLists.txt  turtle.cpp  turtle_frame.cpp  turtlesim.cpp
src/AP_actuator/include/: AP_actuator_swc.h  logging_cfg.h  turtle.h  turtle_frame.h
src/AP_controller/: CMakeLists.txt  LKA_controller.cpp  application.cpp  main.cpp  rosap_error_domain.cpp
src/AP_controller/include/: LKA_controller.h  application.h
src/ROS_locator/: CMakeLists.txt  ROS_locator.cpp
src/common/commandlineparser/: command_line_parser.cc  command_line_parser.h
src/rosap_exe/: CMakeLists.txt  ToGoal_controller.cpp  application.cpp  main.cpp  rosap_converter.cpp  rosap_converter_swc.cpp
src/rosap_exe/include/: ToGoal_controller.h  application.h  main.ref  rosap_converter.h  rosap_converter_swc.h  rosap_error_domain.h
tutorials/: draw_square.cpp
(+105 files in other folders)
